--- a/modules/20_incident_icm/app/views/icm/incident_journals/edit_close.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/edit_close.html.erb
@@ -7,19 +7,16 @@
             <td class="data-col">
               <%=f.select :close_reason_id,options_for_select(available_close_code,@incident_request.close_reason_id),
                                                   {},{:required=>true,:id=>"incident_request_close_reason_code"}%>
-            <td class="label-col empty">&nbsp;</td>
-            <td>&nbsp;</td>
-            <td class="label-col empty">&nbsp;</td>
-            <td>&nbsp;</td>
+            <td class="label-col"><label for="incident_request_service_code"><%=t(:label_icm_incident_request_target_system)%></label></td>
+            <td class="data-col"><%=f.select :external_system_id,
+                                             nullable_options_for_select(available_external_systems_with_person(@incident_request.requested_by).collect{|p| [p[:system_name], p.id]},@incident_request.external_system_id),
+                                             {:value=>@incident_request.external_system_id},
+                                             {:required=>true,:id=>"ass_external_system"} %>
+            </td>
           </tr>
           <tr>
           <tr>
-             <td class="label-col"><label for="incident_request_service_code"><%=t(:label_icm_incident_request_target_system)%></label></td>
-             <td class="data-col"><%=f.select :external_system_id,
-                          nullable_options_for_select(available_external_systems_with_person(@incident_request.requested_by).collect{|p| [p[:system_name], p.id]},@incident_request.external_system_id),
-                          {:value=>@incident_request.external_system_id},
-                          {:required=>true,:id=>"ass_external_system"} %>
-            </td>
+
             <td class="label-col"><label for=""><%=t(:label_icm_incident_request_incident_category)%></label></td>
             <td class="data-col"><%=f.select :incident_category_id,
                                           nullable_options_for_select([],@incident_request.incident_category_id),
@@ -45,16 +42,16 @@
           <tr>
             <%= fields_for @incident_journal,:as=>"incident_journal",:builder => LabellingFormBuilder,:normal=>true do |sub_f|%>
               <%= sub_f.hidden_field(:incident_request_id) %>
-            <td class="label-col"><%= t(:label_icm_incident_journal_reply) %></td>
-            <td class="data-3col" colspan="5">
-              <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true,:class=>"input-xlarge"%>
+            <td class="label-col"><label><%= t(:label_icm_incident_journal_reply) %></label></td>
+            <td class="data-3col" colspan="3">
+              <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true,:class=>"input-xlarge",:style=>"width:90%;" %>
               <%= xheditor("msgEditor",true) %>
             </td>
             <% end%>
           </tr>
           <tr>
             <td class="label-col"><%= t(:label_icm_incident_journal_attachment) %></td>
-            <td  class="data-3col" colspan="5">
+            <td  class="data-3col" colspan="3">
               <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"pass_incident_request_file"} %>
             </td>
           </tr>
