--- a/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
+++ b/modules/50_change_chm/app/views/chm/change_requests/_journal_form.html.erb
@@ -5,8 +5,12 @@
         <tr>
           <%= f.hidden_field(:change_request_id) %>
           <%= f.hidden_field(:replied_by) %>
-          <td class="data-col" colspan="4" width="100%">
-            <%= f.text_area :message_body ,:id=>"msgEditor", :jrequired => true,:rows=>8%>
+          <% if ie6? -%>
+          <td class="data-4col" colspan="4" style="padding: 2px 20px 2px 10px;">
+          <% else -%>
+          <td class="data-4col" colspan="4">
+          <% end -%>
+            <%= f.text_area :message_body ,:id=>"msgEditor", :jrequired => true,:rows=>8,:style=>"width:100%;" %>
             <%= xheditor("msgEditor",true) %>
           </td>
         </tr>
