修正ie6 treeview的显示方式

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
@@ -5,7 +5,7 @@
  *= require_self
  *= require bootstrap/bootstrap-ie6
  *= require framework/framework
- *= require plugins/treeview.ie6
+ *= require plugins/treeview
  *= require browser/ie6
  *= require ie6
 */
