--- a/modules/110_hotline_hli/app/views/icm/incident_requests/_help_desk_list.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/_help_desk_list.html.erb
@@ -2,5 +2,5 @@
               {:export_data=>"#incidentRequestExport",
                :search_box=>"incident_requestsSearchBox",
                :paginator_box=>'incidentRequestsPaginatorBox',
-               :view_filter=>true,:scroll=>"xy",
+               :view_filter=>true,:row_perpage => 50,
                :export_data=>"#exportData"})%>
