--- a/modules/110_hotline_hli/reports/views/hli/supporter_work_details/_params.html.erb
+++ b/modules/110_hotline_hli/reports/views/hli/supporter_work_details/_params.html.erb
@@ -34,11 +34,11 @@
             <tr>
               <td>
                 <label for="filterDateFrom"><%= t(:label_irm_report_filter_date_from) %></label>
-                <%= date_field_tag(:start_date,program_params[:start_date],:id=>"filterDateFrom",:name=>"program_params[start_date]",:size=>12,:nobutton=>true)%>
+                <%= date_field_tag(:start_date,:value => program_params[:start_date],:id=>"filterDateFrom",:name=>"program_params[start_date]",:size=>12,:nobutton=>true)%>
               </td>
               <td>
                 <label for="filterDateTo"><%= t(:label_irm_report_filter_date_to) %></label>
-                <%= date_field_tag(:end_date,program_params[:end_date],:id=>"filterDateTo",:name=>"program_params[end_date]",:size=>12,:nobutton=>true)%>
+                <%= date_field_tag(:end_date,:value => program_params[:end_date],:id=>"filterDateTo",:name=>"program_params[end_date]",:size=>12,:nobutton=>true)%>
               </td>
             </tr>
           </table>
