fixed: fix some css class

--- a/modules/110_hotline_hli/reports/views/hli/supporter_work_details/_params.html.erb
+++ b/modules/110_hotline_hli/reports/views/hli/supporter_work_details/_params.html.erb
@@ -1,10 +1,8 @@
 <% require_javascript(:datepicker) %>
 <% require_css(:datepicker) %>
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table  class="form-table baseFilter" id="baseFilter">
   <tbody>
     <tr>
-      <td width="30%"></td>
-      <td></td>
       <td>
         <label for="loginPerson_label"><%= t(:label_irm_external_system) %></label>
         <div style="white-space:nowrap">
@@ -54,6 +52,5 @@
         </div>
       </td>
     </tr>
-  <%  %>
   </tbody>
 </table>
