--- a/modules/110_hotline_hli/reports/views/hli/incident_amount_by_month_cate/_params.html.erb
+++ b/modules/110_hotline_hli/reports/views/hli/incident_amount_by_month_cate/_params.html.erb
@@ -1,6 +1,6 @@
 <% require_javascript(:datepicker) %>
 <% require_css(:datepicker) %>
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table class="form-table baseFilter"  id="baseFilter">
   <tbody>
     <tr>
       <td>
