--- a/modules/110_hotline_hli/reports/views/hli/incident_request_workload_detail/_params.html.erb
+++ b/modules/110_hotline_hli/reports/views/hli/incident_request_workload_detail/_params.html.erb
@@ -1,9 +1,8 @@
 <% require_javascript(:datepicker) %>
 <% require_css(:datepicker) %>
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table  class="form-table baseFilter"  id="baseFilter">
   <tbody>
     <tr>
-      <td width="30%"></td>
       <td>
         <label for="loginPerson_label"><%= t(:label_irm_external_system) %></label>
         <div style="white-space:nowrap">
@@ -44,9 +43,6 @@
           </table>
         </fieldset>
       </td>
-    </tr>
-    <tr>
-      <td width="30%"></td>
       <td>
         <label><%=t(:label_icm_incident_request_hotline)%></label>
         <div style="white-space:nowrap">
