fixed: 修正问题新建、编辑页面，应用系统列表不按首字母拼音排序的问题

--- a/modules/110_hotline_hli/app/views/icm/incident_requests/_edit_form.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/_edit_form.html.erb
@@ -24,7 +24,7 @@
                            :required => true}%>
               <% else %>
                   <%=f.select :external_system_id,
-                          nullable_options_for_select(available_external_systems_with_person(Irm::Person.current.id).collect{|p| [p[:system_name], p.id]},@incident_request.external_system_id),
+                          nullable_options_for_select(current_person_assessible_external_system_full(Irm::Person.current.id),@incident_request.external_system_id),
                           {},
                           {:id=>"ass_external_system",
                            :depend=>"incident_request_requested_by",
