--- a/modules/110_hotline_hli/app/views/icm/incident_requests/_new_form.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/_new_form.html.erb
@@ -37,7 +37,7 @@
                             :href=>url_for(:controller=>"icm/incident_requests",:action=>"get_external_systems",:format=>"json",:requested_by=>"${incident_request_requested_by}")}%>
                <% else %>
                    <%=f.select :external_system_id,
-                           nullable_options_for_select(available_external_systems_with_person(Irm::Person.current.id).collect{|p| [p[:system_name], p.id]},@incident_request.external_system_id),
+                           nullable_options_for_select(current_person_assessible_external_system_full(Irm::Person.current.id),@incident_request.external_system_id),
                            {:value=>@incident_request.external_system_id},
                            {:required=>true,:id=>"ass_external_system",
                             :origin_value=>@incident_request.external_system_id,
