--- a/modules/110_hotline_hli/app/views/icm/incident_journals/edit_workload.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_journals/edit_workload.html.erb
@@ -1,98 +1,19 @@
-<style type="text/css">
-  ul{
-      padding-left: 40px;
-  }
-  ol{
-      padding-left: 40px;
-  }
-  div.reply{
-      margin-bottom: 2px;
-      border: 1px solid #0F5C8E;
-  }
-  div.reply div.replyHeader{
-      padding: 5px 5px 5px 5px;
-      background: none repeat scroll 0 0 #ADCBE7;
-  }
-  div.reply div.replyHeaderSection{
-    padding: 5px 5px 5px 5px;
-  }
-  .yui-skin-sam .yui-toolbar-container div.yui-toolbar-subcont{
-    border-bottom-width: 1px;
-    padding-bottom: 0;
-    padding-left: 1px;
-  }
-  div.fileList {
-    color: #333333;
-    line-height: 1.6em;
-    margin-top: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    overflow: hidden;
-    position: relative;
-    border-top: 2px solid #E3EEF8;
-  }
-  div.fileList div.fileItem{
-    color: #888888;
-    display: inline;
-    float: left;
-    padding-bottom: 5px;
-    width: 60px;
-  }
-
-  div.fileList div.fileItem span.fileDesc{
-    color: #888888;
-    display: block;
-  }
-
-  div.fileList div.fileItem img.fileIcon{
-    border: 1px solid #BBC9E2;
-    float: left;
-    margin-bottom: 5px;
-    margin-right: 10px;
-    padding: 3px;
-    vertical-align: top;
-  }
-
-  tr{height:25px;}
-</style>
 <%= common_title(:model_name=>Icm::IncidentRequest.name,:action_meaning=>t(:label_icm_incident_journal_edit_workload)) %>
 <%= form_for(@incident_request,:url=>{:action=>"update_workload"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
-<div id="reply" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_icm_incident_journal_edit_workload)%></h2></td>
-          <td class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "new"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <div class="pbSubheader tertiaryPalette first" style="background-color:#aeaeae;padding-left:15px;">
-        <h3>(<%= @incident_request[:incident_status_name] %>)[<%=@incident_request[:request_number]%>]<%=@incident_request[:title]%></h3>
-      </div>
-      <table class="detailList"  cellpadding="0" cellspacing="0" border="0">
+    <% content_for :form_block_common   do%>
+      <table class="form-table" style="width: 100%;">
         <tbody>
             <tr>
-              <td class="labelCol"></td>
-              <td><label for="incident_request_close_reason_code"><%=t(:label_icm_incident_request_real_processing_time)%></label></td>
-              <td class=""></td>
-              <td>&nbsp;</td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td>&nbsp;</td>
+              <td class="label-col"></td>
+              <td class="data-col"><label for="incident_request_close_reason_code"><%=t(:label_icm_incident_request_real_processing_time)%></label></td>
             </tr>
             <tr id="workload_list" style="display:none"></tr>
             <% @supporters.each do |sp| %>
                 <%= fields_for("incident_workloads[]", @incident_request.incident_workloads.build()) do |w|%>
                     <tr id="workload_<%= sp[:supporter_id]%>">
-                      <td class="labelCol"></td>
-                      <td>
-                        <%= w.text_field :real_processing_time, :value => sp[:real_processing_time].blank? ? '0' : sp[:real_processing_time], :irm_pos_real_number => true, :size => 5%>&nbsp;<%= sp[:login_name]%>(<%= sp[:supporter_name]%>)
+                      <td class="label-col"></td>
+                      <td class="data-col">
+                        <%= w.text_field :real_processing_time, :value => sp[:real_processing_time].blank? ? '0' : sp[:real_processing_time], :irm_pos_real_number => true, :size => 5, :style => "width:30px"%>&nbsp;<%= sp[:login_name]%>(<%= sp[:supporter_name]%>)
                         <%= w.hidden_field :person_id, :value => sp[:supporter_id]%>
                         <%= link_to I18n.t(:remove), {}, {:class => "remove_workload", :href => "javascript:void(0)"}%>
                       </td>
@@ -100,96 +21,171 @@
                 <% end%>
             <% end %>
             <tr>
-              <td></td>
-              <td class="labelCol">
+              <td class="label-col"></td>
+              <td class="data-col">
                 <%= select_tag("add_workload_select", options_for_select(available_people), {:id => "workload_select"})%><%= link_to I18n.t(:add), {}, {:id => "add_workload", :href => "javascript:void(0)"}%>
               </td>
             </tr>
         </tbody>
       </table>
+    <% end %>
 
-    </div>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-        <div class="pbSubsection" id="incidentDetail">
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_target_system)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:external_system_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_incident_category)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:incident_category_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_incident_sub_category)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:incident_sub_category_name] %></div></td>
-                </tr>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_requested_by)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:requested_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_contact)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:contact_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_submitted_by)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:submitted_name] %></div></td>
-                </tr>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_requested_by_org)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:requested_organization_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_requested_by_role)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:requested_role_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_requested_by_profile)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:requested_profile_name] %></div></td>
-                </tr>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_incident_status_code)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:incident_status_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_submitted_date)%></label></td>
-                  <td class="data3Col"><div><%= format_date(@incident_request[:submitted_date]) %></div></td>
-                </tr>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_urgence_code)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:urgence_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_impact_range_code)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:impact_range_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_priority)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:priority_name] %></div></td>
-                </tr>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_client_info)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:client_info] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_hotline)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:hotline].eql?(Irm::Constant::SYS_YES) ? t(:label_icm_incident_request_hotline_y) : t(:label_icm_incident_request_hotline_n)%></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_real_processing_time)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:total_processing_time]%></div></td>
-                </tr>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_support_group)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:support_group_name] %></div></td>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_support_person)%></label></td>
-                  <td class="data3Col"><div><%= @incident_request[:supporter_name] %></div></td>
-                </tr>
-                <tr>
-                  <td class="label3Col"><label ><%=t(:label_icm_incident_request_contact_number)%></label></td>
-                  <td class="data3Col" colspan="3"><div><%= @incident_request[:contact_number] %></div></td>
-                </tr>
-            </tbody>
-          </table>
-        </div>
-        </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+    <% content_for :block_header_content do %>
+      <div id="incidentDetail">
+      <table class="detail-list" cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+          <tr>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_target_system) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:external_system_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_incident_category) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:incident_category_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_incident_sub_category) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:incident_sub_category_name] %></div>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_requested_by) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:requested_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_contact) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:contact_name] %>(<%= @incident_request[:contact_number] %>)</div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_submitted_by) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:submitted_name] %></div>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_requested_by_org) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:requested_organization_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_requested_by_role) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:requested_role_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_requested_by_profile) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:requested_profile_name] %></div>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col">
+              <label><%= t(:label_icm_incident_request_incident_status_code) %></label>
+            </td>
+            <td class="data-col">
+              <div><%= @incident_request[:incident_status_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_submitted_date) %></label></td>
+            <td class="data-col">
+              <div><%= format_date(@incident_request[:submitted_date]) %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_last_date) %></label></td>
+            <td class="data-col">
+              <div><%= format_date(@incident_request[:last_response_date]) %></div>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_urgence_code) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:urgence_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_impact_range_code) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:impact_range_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_priority) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:priority_name] %></div>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_icm_incident_request_client_info)%></label></td>
+            <td class="data-col"><div><%= @incident_request[:client_info] %></div></td>
+            <td class="label-col"><label ><%=t(:label_icm_incident_request_hotline)%></label></td>
+            <td class="data-col"><div><%= @incident_request[:hotline].eql?(Irm::Constant::SYS_YES) ? t(:label_icm_incident_request_hotline_y) : t(:label_icm_incident_request_hotline_n)%></div></td>
+            <td class="label-col"><label ><%=t(:label_icm_incident_request_real_processing_time)%></label></td>
+            <td class="data-col"><div><%= @incident_request[:total_processing_time]%></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_support_group) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:support_group_name] %></div>
+            </td>
+            <td class="label-col"><label><%= t(:label_icm_incident_request_support_person) %></label></td>
+            <td class="data-col">
+              <div><%= @incident_request[:supporter_name] %></div>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_icm_incident_request_contact_number)%></label></td>
+            <td class="data-col" colspan="5"><div><%= @incident_request[:contact_number] %></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_icm_incident_request_summary)%></label></td>
+            <td class="data-col" colspan="5" style="word-WRAP: break-word;">
+              <div class="reply-body">
+                <div class="message-body">
+                  <h3><%= raw process_message("#{I18n.t(:label_icm_incident_request_title)}: [#{@incident_request[:request_number]}]#{@incident_request[:title]}")  %></h3><br><br>
+                  <%= raw process_message(@incident_request[:summary])  %>
+                </div>
+              </div>
+            </td>
+          </tr>
+          </tbody>
+      </table>
+      </div>
+    <% end %>
+
+    <% content_for :form_buttons  do %>
+        <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+        <%= link_to t(:cancel), {:action => "new"}, {:class => "btn cancel"}%>
+    <% end %>
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel), {:action => "new"}%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"><%=t(:label_icm_incident_journal_edit_workload)%></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+      </table>
+      <%= error_for @incident_request %>
+      <div class="page-block-body">
+        <div class="sub-page-block">
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_common   %>
+          </div>
+        </div>
+      </div>
+      <div class="page-block-body">
+        <div class="sub-page-block">
+          <div class="sub-page-block-body">
+            <%= content_for :block_header_content   %>
+          </div>
+        </div>
+      </div>
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title"></td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+        </tr>
+      </table>
+    </div>
+
 <% end %>
 <script type="text/javascript">
   $(function(){
@@ -213,15 +209,14 @@
   function add_workload(wid, wtext){
     if ($("#workload_"+ wid).length < 1){
         $("#workload_list").after('<tr id="workload_'+ wid +'">'+
-                              '<td class="labelCol"></td>'+
-                              '<td id="ext-gen1127">'+
-                                '<input type="text" value="0" size="5" name="incident_workloads[][real_processing_time]" irm_pos_real_number="true" id="incident_workloads__real_processing_time">&nbsp;'+ wtext +''+
+                              '<td class="label-col"></td>'+
+                              '<td id="ext-gen1127" class="data-col">'+
+                                '<input type="text" value="0" size="5" style="width:30px" name="incident_workloads[][real_processing_time]" irm_pos_real_number="true" id="incident_workloads__real_processing_time">&nbsp;'+ wtext +''+
                                 '<input type="hidden" value="'+ wid +'" name="incident_workloads[][person_id]" id="incident_workloads__person_id">'+
                                 '<a href="javascript:void(0)" class="remove_workload" onclick=$(this).parent().parent().remove() ><%= I18n.t(:remove)%></a>'+
                               '</td>'+
                             '</tr>');
     }
   }
-
 </script>
 
