添加chosen插件对IE6的支持

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/application-ie6.css
@@ -6,6 +6,8 @@
  *= require bootstrap/bootstrap-ie6
  *= require framework/framework
  *= require plugins/treeview
+ *= require plugins/jquery-chosen
+ *= require plugins/chosen-overrides
  *= require browser/ie6
  *= require ie6
 */
