修正表格控件无法使用每页显示数据数量的bug

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -1378,6 +1378,7 @@ div.min-block-body {
     width: 30px;
     padding: 0px;
     line-height: 16px;
+    border: 1px solid #BBBBBB;
 }
 
 .paginator .paginator-center {
