--- a/modules/110_hotline_hli/app/views/irm/projects/get_data.html.erb
+++ b/modules/110_hotline_hli/app/views/irm/projects/get_data.html.erb
@@ -1,7 +1,7 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
     <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
         <%= link_to(t(:edit),{:action=>"edit",:project_code=>data[:short_name]}) %>&nbsp;
-        <%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+        <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
     <% end %>
     <% builder.column(:org_name,{:title=>t(:label_irm_organization)})%>
     <% builder.column(:system_name,{:title=>t(:label_irm_external_system),:searchable=>true})%>
