fixed: 修正人员查看页面，两个表格的翻页栏不显示的问题

--- a/modules/10_ironmine_irm/app/views/irm/group_members/get_data_from_person.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/group_members/get_data_from_person.html.erb
@@ -2,6 +2,6 @@
   <% builder.column(:id,{:title=>t(:operation), :width => "3px"}) do |data|%>
     <%= bootstrap_icons "icon-trash", t(:remove), {:controller=>"irm/group_members",:action=>"delete_from_person",:id=>data[:id], :person_id=>@person.id},:confirm => t(:label_are_you_sure),:method => :delete %>
   <% end %>
-  <% builder.column(:name,{:title=>t(:label_irm_group_name)})%>
+  <% builder.column(:name,{:title=>t(:label_irm_group_name), :searchable => true})%>
   <% builder.column(:description,{:title=>t(:label_irm_group_description)})%>
 <% end %>
