--- a/modules/10_ironmine_irm/app/views/irm/people/get_owned_external_systems.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/people/get_owned_external_systems.html.erb
@@ -2,7 +2,7 @@
   <% builder.column(:id,{:title=>t(:operation), :width => "30px"}) do |data|%>
     <%= bootstrap_icons("icon-trash", t(:remove), {:controller=>"irm/external_system_members",:action=>"delete_from_person",:external_system_id=>data[:id],:person_id=> @person.id},:confirm => t(:label_are_you_sure) ,:method => :delete) %>
   <% end %>
-  <% builder.column(:system_name,{:title=>t(:label_irm_group_name)})%>
+  <% builder.column(:system_name,{:title=>t(:label_irm_group_name), :searchable => true})%>
   <% builder.column(:system_description,{:title=>t(:label_irm_group_description)})%>
   <% builder.column(:external_system_code)%>
 <% end %>
