--- a/modules/10_ironmine_irm/app/views/irm/watchers/_sidebar_watcher_list.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/watchers/_sidebar_watcher_list.html.erb
@@ -1,7 +1,7 @@
 <% if allow_to_function?(:view_watcher) %>
     <% l_editable = allow_to_function?(:edit_watcher)%>
-    <% (l_editable = editable && l_editable) if !editable.nil?%>
-    <%= form_tag({:controller => "irm/watchers", :action => "add_watcher", :watchable_id => watchable.id}, :remote => true) do %>
+    <% (l_editable = editable && l_editable) if editable.present?%>
+    <%= form_tag({:controller => "irm/watchers", :action => "add_watcher", :watchable_id => watchable.id,:_dom_id=>dom_id,:editable=>editable}, :remote => true) do %>
       <div class="sidebar-block">
           <div class="sidebar-block-header">
             <h2><%= t :label_irm_watcher %><%= ("(" + watchers_size(watchable).to_s + ")")%></h2>
@@ -16,7 +16,7 @@
             <% end %>
             <div class="form-inline">
               <table>
-                  <%= watchers_list(watchable)%>
+                  <%= watchers_list(watchable,l_editable,dom_id)%>
               </table>
             </div>
           </div>
