--- a/modules/110_hotline_hli/app/views/icm/incident_journals/get_incident_history_data.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_journals/get_incident_history_data.html.erb
@@ -1,4 +1,3 @@
-
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
     <% builder.column(:created_at,{:title=>t(:label_icm_incident_journal_date), :width => "55px"})%>
     <% builder.column(:created_by_full_name,{:title=>t(:label_icm_incident_journal_created_by), :width => "40px"})%>
@@ -6,8 +5,6 @@
         <%= I18n.t(("label_icm_incident_request_" + data[:property_key].gsub(/\_id$/, "")).to_sym) %>
     <% end %>
     <% builder.column(:new_value_label,{:title=>t(:label_icm_incident_journal_new_value), :width => "90px"}) do |data| %>
-        <% unless data[:old_value_label].blank? && data[:new_value_label].blank?%>
-        <%= data[:old_value_label] + "==>" + data[:new_value_label]%>
-        <% end %>
+        <%= "#{data[:old_value_label]} ==> #{data[:new_value_label]}"%>
     <% end %>
 <% end %>
