--- a/modules/30_knowledge_skm/app/views/skm/entry_headers/knowledge_details.html.erb
+++ b/modules/30_knowledge_skm/app/views/skm/entry_headers/knowledge_details.html.erb
@@ -69,13 +69,13 @@
       <td class="page-block-title">
         <h2 class="block-title"><%= t(:label_skm_entry_header_approve) %></h2>
       </td>
-      <td class="page-block-button">
+      <td class="page-block-button" id="cancelApproval">
         <%= link_to t(:cancel), {:action => "wait_my_approve"},:class=>"btn cancel"%>
       </td>
     </tr>
   </table>
   <div class="page-block-body">
-    <%= form_for(@entry_header.entry_approval_people.build, :url => {:controller => 'skm/entry_headers', :action => 'approve_knowledge'}) do |f| %>
+    <%= form_for(@entry_header.entry_approval_people.build, :url => {:controller => 'skm/entry_headers', :action => 'approve_knowledge'},:html => {:id => "approvalForm"}) do |f| %>
         <%= f.hidden_field :entry_header_id %>
         <%= hidden_field_tag :commit, t(:label_skm_entry_header_button_ok), :id => 'commitType' %>
         <table class="form-table" style="width: 100%;">
@@ -87,6 +87,10 @@
                 <span><i class="icon-ok icon-white"></i></span>
                 <span class="btn-text"><%= t(:label_skm_entry_header_button_ok) %></span>
               </span>
+              <a href="#toPeopleModal" class="btn btn-info" data-toggle="modal" id="toPeople">
+                <span><i class="icon-user icon-white"></i></span>
+                <span class="btn-text"><%= t(:label_skm_entry_header_button_to) %></span>
+              </a>
               <span class="approve_btn btn btn-danger submit">
                 <span><i class="icon-remove icon-white"></i></span>
                 <span class="btn-text"><%= t(:label_skm_entry_header_button_no) %></span>
@@ -96,13 +100,71 @@
         </tbody>
       </table>
     <%- end -%>
+    <%= form_tag({:controller => 'skm/entry_headers', :action => 'next_approval',:id => @entry_header.id},{:id =>"toOtherPeopleForm",:style => "display:none;" }) do %>
+        <table class="form-table">
+          <tbody>
+          <tr>
+            <td class="data-4col" style="padding: 2px 20px 2px 10px !important;">
+              <%= select_tag_alias(:person_id,@group_members,nil,{:id=>"select_people", "data-placeholder" => t(:label_skm_entry_header_choice_people), :style=>"width:350px;", :multiple=>false}) %>
+              <%= link_submit t(:label_skm_entry_header_to_people_save),{:class=>"btn btn-info"}%>
+              <%= link_to t(:cancel), "javascript:void(0);", :class => "btn btn-cancel",:id => "cancelToPeople" %>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+    <% end -%>
+  </div>
+  <!-- 显示知识审核转交 -->
+  <div class="modal hide fade" id="toPeopleModal" tabindex="-1" role="dialog" aria-labelledby="toPeopleModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="toPeopleModalLabel"><%= t(:label_skm_entry_header_to_title) %></h3>
+    </div>
+    <div class="modal-body">
+      <%= link_to '', {:controller => 'skm/entry_headers',:action => 'get_available_people',:id => @entry_header.id, :channel_id => @entry_header.channel_id },:style => "display: none", :id => 'available_people_href' %>
+      <div class="loading"></div>
+      <div id="modal-content" style="min-height: 300px; *height: 300px;"></div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+      <button class="btn btn-primary">Save changes</button>
+    </div>
   </div>
   <script type="text/javascript">
     $(function(){
       $(".approve_btn").click(function(){
         $("#commitType").attr("value", $($(this).find(".btn-text")[0]).text());
         $(this).parents('form')[0].submit();
-      })
+      });
+      $("#toPeople").click(function(){
+          $("#approvalForm").hide();
+          $("#cancelApproval").hide();
+          $("#toOtherPeopleForm").show();
+          $("#cancelToPeople").click(function(){
+              $("#toOtherPeopleForm").hide();
+              $("#approvalForm").show();
+              $("#cancelApproval").show();
+          });
+          return false;
+          var url = $("#available_people_href").attr('href')+'&_dom_id=hidden';
+          $.ajax({
+            type: 'get',
+            url: url,
+            dataType: 'html',
+            beforeSend: function(){
+              $("#modal-content").hide();
+              $("#toPeopleModal").find('.loading').show();
+            },
+            error: function(){
+              alert("数据加载出错了。");
+            },
+            success: function(data){
+              $("#modal-content").html(data);
+              $("#modal-content").show();
+              $("#toPeopleModal").find('.loading').hide();
+            }
+          });
+      });
     });
   </script>
 </div>
